# xerus

./: .env.example  .gitignore  CUSTOM_TOOL_EXAMPLE.md  MANIFEST.in  MCP_IMPLEMENTATION.md  MCP_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
docs/: CONFIG_CUSTOMIZATION.md  MCP_SETUP.md  SECURITY.md
tests/: __init__.py  test_cli.py
xerus/: __init__.py  agent.py  cli.py  config.py  config_template.json  config_template.toml  display.py  error_handler.py  errors.py  model.py  models.py  sessions.py  tools.py  utils.py
xerus/cli/: __init__.py  app.py  progress.py  sessions.py
xerus/cli/commands/: __init__.py  chat.py  run.py  sessions.py
xerus/commands/: __init__.py  chat.py  init.py  run.py  sessions.py
xerus/config_templates/: config_template_gmi.json  config_template_nebius.json  config_template_novita.json  config_template_openai.json
xerus/docs/: mcp_integration.md
xerus/examples/: README.md  calculator_tool.py  hello_tool.py  mcp_example.py
xerus/models/: __init__.py  base.py  inference.py  litellm.py  mlx.py  openai.py  transformers.py
xerus/tools/: README.md  __init__.py  base.py  built_in.py  builtin_manager.py  collection.py  factory.py  hub.py  importer.py  local.py  manager.py  manager_factory.py  mcp_manager.py  space.py
xerus/ui/: __init__.py  display.py  progress.py
